refactor: rename MainConfiguration, enforce SRP